app.yaml
# Deployment of the mongo app 
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: smart-search-embedded
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      containers:
      - image: mongo:latest
        imagePullPolicy: IfNotPresent
        name: mongo
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/configdb
          name: mongo-claim-config
        - mountPath: /data/db
          name: mongo-claim-db
      - image: spacelama/api:latest
        imagePullPolicy: IfNotPresent
        name: spacelama-api
        ports:
        - containerPort: 9000
        resources: {}
      - image: spacelama/web:latest
        name: spacelama-web
        ports:
        - containerPort: 4200
        resources: {}
      restartPolicy: Always
      volumes:
      - name: mongo-claim-config
        persistentVolumeClaim:
          claimName: mongo-claim-config
      - name: mongo-claim-db
        persistentVolumeClaim:
          claimName: mongo-claim-db
status: {}
