spacelama-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.15.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: spacelama-api
  name: spacelama-api
spec:
  replicas: 3
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: spacelama-api
    spec:
      containers:
      - image: spacelama/api:latest
        name: spacelama-api
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
status: {}
