spacelama-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.15.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: spacelama-api
  name: spacelama-api
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    io.kompose.service: spacelama-api
status:
  loadBalancer: {}
