web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.15.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 4200
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
