cloud_ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartsearch
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: smartsearch
  name: global-ingress
  labels:
    app: smartSearch
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
    kubernetes.io/ingress.class: "gce"
    # ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: smartsearch-web
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /app
        backend:
          serviceName: smartsearch-web
          servicePort: 80
      - path: /app/*
        backend:
          serviceName: smartsearch-web
          servicePort: 80
      - path: /api
        backend:
          serviceName: smartsearch-api
          servicePort: 9000
      - path: /api/*
        backend:
          serviceName: smartsearch-api
          servicePort: 9000
    host: etopin.ddns.net
