ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartsearch
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: smartsearch
  name: global-ingress
  labels:
    app: smartSearch
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: dev-smartsearch-web
          servicePort: 80
      - path: /api
        backend:
          serviceName: dev-smartsearch-api
          servicePort: 9000
    host: dev.localhost # Change with your own hostname
  - http:
      paths:
      - path: /
        backend:
          serviceName: smartsearch-web
          servicePort: 80
      - path: /api
        backend:
          serviceName: smartsearch-api
          servicePort: 9000
    host: localhost # Change with your own hostname
