local_ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartsearch
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: smartsearch
  name: dev-smartsearch-ingress
  labels:
    stage: development
    app: smartSearch
spec:
  backend:
    serviceName: dev-smartsearch-web
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /app/*
        backend:
          serviceName: dev-smartsearch-web
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: dev-smartsearch-api
          servicePort: 9000
